platform/openshift/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: antonio-dimarino-dev
spec:
  selector: { app: api-gateway }
  ports:
  - name: http
    port: 80
    targetPort: 8080
