platform/openshift/api-gateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway
  namespace: antonio-dimarino-dev
spec:
  to: { kind: Service, name: api-gateway }
  port:
    targetPort: http
